gcc/testsuite/g++.old-deja/g++.robertl/eb119.C
// { dg-do assemble  }
template<bool B>
void f()			// { dg-message "candidate" }
{
}

int main()
{
  f<bool>(); // { dg-error "" } .*
}

